...
        view?.setAvatar(with: imageUrl)
    }
    
    func didTapLogout() {
        let actions = [
            AlertAction(title: "Нет", style: .cancel, handler: nil),
            AlertAction(title: "Да", style: .default) { [weak self] in
                guard let self else { return }
                logout()
            }
        ]
        
        let alert = AlertModel(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            actions: actions,
            preferredStyle: .alert
        )
        
        view?.showAlert(alert)
...
